--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Andhra Pradesh completed in the year 2018 with a percentage of 83.6
                 <li>HTML,CSS</li>
             </ul>
             <h3><u>PERSONAL DETAILS</u></h3>
-            <p> Father's Name:POSA GANGADHAR <br> 
+            <p> Father's Name:Gangadhar Posa <br> 
                 Gender&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp: Female<br>
 
                 Date of Birth : 2002-08-14<br>
